test/types/file/freadNotABoolean.good
freadNotABoolean.chpl:5: error: bad format: missing expected literal in channel.read(ref a:bool) with path "freadNotABoolean.txt" offset 0
